# ivd_splat_scannetpp_integration

./: .gitignore  .gitmodules  README.md  convert_pointclouds.py  prepare_dataset.sh  prepare_scannetpp_configs.py  requirements.txt
scannetpp_nerfbaselines_loader/: README.md  pyproject.toml
scannetpp_nerfbaselines_loader/src/scannetpp_nerfbaselines_loader/: register_scannetpp_loader.py  scannetpp_loader.py
